funciones para watson
