# source/back-end/openapi-spec.json
@@ -31,6 +31,20 @@
         }
       }
     },
+    "/watson": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/airlines": {
       "get": {
         "description": "",
